RESOLVED FIXED276901
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/anonymous-flex-item-005.html
https://bugs.webkit.org/show_bug.cgi?id=276901
Summary [Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/anonymous-flex-ite...
alan
Reported 2024-07-22 13:14:54 PDT
ssia
Attachments
[fast-cq]Patch (4.69 KB, patch)
2024-07-22 13:34 PDT, alan
no flags
alan
Comment 1 2024-07-22 13:34:35 PDT
Created attachment 471929 [details] [fast-cq]Patch
EWS
Comment 2 2024-07-23 10:15:25 PDT
Committed 281251@main (8792d4d4d31e): <https://commits.webkit.org/281251@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471929 [details].
Radar WebKit Bug Importer
Comment 3 2024-07-23 10:16:18 PDT
Note You need to log in before you can comment on or make changes to this bug.